sort.basic.bubble.AlgBubbleSort1.scala.error
Erreur de compilation :
AlgBubbleSort1:3: error: not found: value getNombreValeur
  var longueur=getNombreValeur()
               ^AlgBubbleSort1:10: error: not found: value longeur
    for(i<- 0 to longeur-k){
                 ^